--- a/fr/GOTO.html
+++ b/fr/GOTO.html
@@ -1,47 +1,47 @@
 <!DOCTYPE html><html><head><meta charset="utf-8">
-<title>Make a night signal / GOTO - IchigoJam</title>
+<title>Faire un signal de nuit / GOTO - IchigoJam</title>
 <link rel="stylesheet" type="text/css" href="ichigojamlist.css">
 <script src="ichigojamlist.js"></script>
 </head><body>
 
-<h1>Make a night signal / GOTO</h1>
+<h1>Faire un signal de nuit  / GOTO</h1>
 
 <section>
-A blinking signal for the night,it turns on and off every 0.5 seconds.
+Un signal clignotant pour la nuit, il s'allume et s'éteint toutes les 0,5 secondes.
 <div id="btn-1"></div><script>make15("btn-1", "10 LED1:WAIT30:LED0:WAIT30\n20 LED1:WAIT30:LED0:WAIT30\nRUN")</script>
-Type line 10 and press ENTER key, then take back the cursor to line 10 and change the head "10" to "20", and press ENTER key.<br>
-Confirm if the line 10 copied to line 20 with "LIST"!
+Tapez la ligne 10 et appuyez sur la touche ENTRÉE, puis ramenez le curseur à la ligne 10 et changez le "10" en "20", et appuyez sur la touche ENTRÉE.<br>
+Confirmez si la ligne 10 est copiée à la ligne 20 avec la commande "LIST" !
 </section>
 
 <section>
-Blink all the time with "GOTO". About 30,000 times until morning.
+Clignote tout le temps avec la commande "GOTO". Environ 30.000 fois jusqu'au matin.
 <div id="btn-2"></div><script>make15("btn-2", "10 LED1:WAIT30:LED0:WAIT30\n20 GOTO 10")</script>
-The number after "GOTO" is a jumping destination.<br>
-&gt; line 10, blink one time<br>
-&gt; line 20, jump to line 10<br>
-To stop, press [ESC] key.
+Le numéro après "GOTO" est une destination de saut.<br>
+&gt; ligne 10, clignote une fois<br>
+&gt; ligne 20, saute sur la ligne 10<br>
+Pour arrêter, appuyez sur la touche [ECHAPE] .
 </section>
 
 <section>
-Fast blink
+Clignotement rapide
 <div id="btn-3"></div><script>make15("btn-3", "LIST\n10 LED1:WAIT3:LED0:WAIT3")</script>
-Display a program with "LIST" (=F4 key).
-Change two "30" to "3" in line 10 , press ENTER key, and execute by "RUN" (=F5 key).
+Afficher le programme avec la commande "LIST" (= touche F4).
+Change "30" en "3" sur la ligne 10 , appuyez la touche "ENTRÉE", et Exécute le programme par la commande "RUN" (= touche F5).
 </section>
 
 <section>
-Repeat alternately between short blink and long blink.
+Répétez alternativement entre un clignotement court et un clignotement long.
 <div id="btn-4"></div><script>make15("btn-4", "15 LED1:WAIT30:LED0:WAIT30")</script>
-Make a line 15 between line 10 and line 20 by changing the line 10's head to 15 and wait 3 to 30, and press ENTER key.<br>
+Faites une ligne 15 entre la ligne 10 et la ligne 20 en changeant l'en-tête de la ligne 10 en 15 et WAIT 3 à WAIT 30, puis appuyez sur la touche ENTRÉE.
 </section>
 
 <section>
-<b>Try it!</b><br>
-1. Let's return to a night signal program<br>
-2. Lengthen only lighting time<br>
-3. Try to fix it to a game that blink at high speed and stop when it is lighting<br>
-4. Make the line numbers from 100 per 100 steps, e.g. 100,200,300<br>
-5. Let's make a cool blink pattern, and boast to somebody.<br>
+<b>Essayez-le!</b><br>
+1. Retournons au programme de signal de nuit<br>
+2. Augmente seulement le temps d'allumage<br>
+3. Essayez de le faire comme un jeu qui clignote à grande vitesse et s'arrête quand il s'allume<br>
+4. Entres les numéros de ligne à partir de 100 en des étapes de 100, par ex. 100 200 300<br>
+5. Faisons un motif de clignotement cool et vantons-nous auprès de quelqu'un.<br>
 </section>
 
 <div id="credit"><a href=https://creativecommons.org/licenses/by/4.0/deed.ja>CC BY</a> <a href="https://ichigojam.github.io/print/en/ ">IchigoJam print</a> https://ichigojam.github.io/print/en/  
