--- a/fr/PLAY.html
+++ b/fr/PLAY.html
@@ -1,40 +1,40 @@
 <!DOCTYPE html><html><head><meta charset="utf-8">
-<title>Compose Music / PLAY - IchigoJam</title>
+<title>Composer une Musique / PLAY - IchigoJam</title>
 <link rel="stylesheet" type="text/css" href="ichigojamlist.css">
 <script src="ichigojamlist.js"></script>
 </head><body>
 
-<h1>Compose Music / PLAY - IchigoJam</h1>
+<h1>Composer une Musique/ PLAY - IchigoJam</h1>
 
 <section>
-Ensure the legs of a sounder are inserted in SOUND(SND) and GND of your IchigoJam.
+Assurez-vous que les pattes d'un haut-parleur sont insérées dans SOUND (SND) et GND de votre IchigoJam.
 <div id="play1-1"></div><script>make15("play1-1", "PLAY\"CDE\"")</script>
-Did you hear the sounds Do-re-mi?
+Avez-vous entendu le son Do-re-mi?
 </section>
 
 <section>
-Do-re-mi-fa-so-la-ti tones are represented by CDEFGAB
+Les sons Do-re-mi-fa-so-la-ti son représentés par CDEFGAB
 <div id="play1-2"></div><script>make15("play1-2", "PLAY\"CDEFGAB\"")</script>
-The octave (=pitch of sound) can be changed by the alphabet "O" followed by a number.
+L'octave (= hauteur du son) peut être modifiée par l'alphabet "O" suivi d'un nombre.
 <div id="play1-3"></div><script>make15("play1-3", "PLAY\"O4 CDEFGAB O5 C\"")</script>
-You can change the length of tone by putting a number.
+Vous pouvez modifier la longueur de la tonalité en mettant un nombre.
 <div id="play1-4"></div><script>make15("play1-4", "PLAY\"CDE2\"")</script>
-"2" of "CDE2" means a half note. Default setting (without a number) is quarter note. Putting "8" means eighth note that its tone length is half of quarter note. "1" means whole note.<br>
-"#" (sharp) is to raise the tone by a semitone, "-" (minus) is to lower the tone by a semitone.<br>
+Le "2" dans "CDE2" signifie une démie note (une blanche). Le réglage par défaut (sans numéro) est le quart de la note (noire). Mettre "8" signifie croche que sa longueur de ton est la moitié de la noire. "1" signifie note entière.<br>
+"#" (dièse) permet d'augmenter le ton d'un demi-ton, "-" (moins) est d'abaisser le ton d'un demi-ton.<br>
 <div id="play1-5"></div><script>make15("play1-5", "PLAY\"C C# F-\"")</script>
-"R" means silence. You can change the length of tones' silence by putting number after R example "R2".
+"R" signifie silence. Vous pouvez modifier la durée du silence en mettant un numéro après R exemple "R2".
 <div id="play1-6"></div><script>make15("play1-6", "PLAY\"CRC\"")</script>
-"T" means to set up the tempo. Default setting is "T120" means 120 quarter note per minute.
+"T" signifie régler le tempo. Le réglage par défaut est "T120" signifie 120 noires par minute.
 <div id="play1-7"></div><script>make15("play1-7", "PLAY\"T240 CDE2 CDE2 GEDCDED2\"")</script>
 </section>
 
 <section>
-<b>Let's try!</b><br>
-1. Make a music "Tulip" "Twinkle-Twinkle" "Old-MacDonald"<br>
-2. Type just "PLAY" during playing music<br>
-3. Make a music "Froggie Song"<br>
-4. Let's play together as orchestra with your friends!<br>
-5. Let's compose music from your text book of music!<br>
+<b>Essayez-le!</b><br>
+1. Faire une musique "Tulipe" "Twinkle-Twinkle" "Old-MacDonald"<br>
+2. Tapez simplement "PLAY" pour jouer une musique<br>
+3. Faire une musique "Froggie Song"<br>
+4. Jouons ensemble en orchestre avec vos amis !<br>
+5. Composons de la musique à partir de votre manuel de musique !<br>
 </section>
 
 <div id="credit"><a href=https://github.com/IchigoJam/print>CC BY on GitHub</a> <a href="https://ichigojam.github.io/print/en/">IchigoJam print</a> https://ichigojam.github.io/print/en/ <a href="http://ichigojam.net/">IchigoJam&reg;jig.jp</a><br>
