--- a/fr/index.html
+++ b/fr/index.html
@@ -33,17 +33,17 @@ Cours de programmation<br>
 - <a href=GOTO.html>Faire un signal de nuit/ GOTO</a><br>
 - <a href=SAVE-LOAD-NEW.html>Enregistrer un Programme/ SAVE-LOAD-NEW</a><br>
 - <a href=RUN-LIST.html>La mémoire d'un programme / RUN/LIST</a><br>
-- <a href=BEEP.html>Make Sounds / BEEP</a><br>
-- <a href=PLAY.html>Compose Music / PLAY</a><br>
-- <a href=FOR.html>Multiplication by loop / FOR/NEXT</a><br>
-- <a href=BIN.html>Make a binary number / BIN$</a><br>
-- <a href=LET.html>Memorize the numbers / LET</a><br>
-- <a href=LRUN.html>Connect the programs / LRUN</a><br>
-- <a href=BTN.html>Convey thoughts / BTN</a><br>
-- <a href=RND.html>Make a dice / RND</a><br>
-- <a href=PCG.html>Make an Original Character / PCG</a><br>
-- <a href=TICK.html>Make a stopwatch / TICK</a><br>
-- <a href=LOGIC.html>1 + 1 = 1, LOGIC PUZZLE</a><br>
+- <a href=BEEP.html>Faire des sons / BEEP</a><br>
+- <a href=PLAY.html>Composer une Musique / PLAY</a><br>
+- <a href=FOR.html>Multiplication avec la boucle / FOR/NEXT</a><br>
+- <a href=BIN.html>Faire un nombre binaire / BIN$</a><br>
+- <a href=LET.html>Mémoriser les chiffres / LET</a><br>
+- <a href=LRUN.html>Connectez les programmes / LRUN</a><br>
+- <a href=BTN.html>Transmettre des pensées / BTN</a><br>
+- <a href=RND.html>Faire un dé / RND</a><br>
+- <a href=PCG.html>Créer un personnage original/ PCG</a><br>
+- <a href=TICK.html>Faire un chronomètre / TICK</a><br>
+- <a href=LOGIC.html>1 + 1 = 1, PUZZLE LOGIQUE</a><br>
 </section>
 
 <section>
