--- a/fr/LET.html
+++ b/fr/LET.html
@@ -1,40 +1,40 @@
 <!DOCTYPE html><html><head><meta charset="utf-8">
-<title>Memorize the numbers / LET - IchigoJam</title>
+<title>Mémoriser les chiffres / LET - IchigoJam</title>
 <link rel="stylesheet" type="text/css" href="ichigojamlist.css">
 <script src="ichigojamlist.js"></script>
 </head><body>
 
-<h1>Memorize the numbers / LET - IchigoJam</h1>
+<h1>Mémoriser les chiffres / LET - IchigoJam</h1>
 
 <section>
-The computer that has preeminent memory, can memorize numbers in variables A to Z!
+L'ordinateur qui a une mémoire prééminente, peut mémoriser des nombres dans les variables A à Z !
 <div id="list1"></div><script>make15("list1", "LET A,1190:LET B,2014:LET C,794")</script>
-If it displays "OK", memorizing is completed!
+S'il affiche "OK", la mémorisation est terminée !
 </section>
 
 <section>
-Clear the screen, and check if memorized A? B? C?
+Effacez l'écran et vérifiez s'ils sont mémorisés A ? B? C?
 <div id="list2"></div><script>make15("list2", "CLS\n?A\n?B\n?C")</script>
-It uses "LET" once again, overwrite the memory.
+Il faut utiliser à nouveau "LET", écrase la mémoire.
 <div id="list3"></div><script>make15("list3", "LET B,2017\n?B")</script>
-It can use also variables instead of numbers.
+Il peut également utiliser des variables au lieu de nombres.
 <div id="list3-2"></div><script>make15("list3-2", "LET C,A+B\n?C\nLET C,C+1\n?C")</script>
-"="(Equal) symbol can be used to write in short form.
+Le symbole "="(égale) peut être utilisé pour écrire sous forme abrégée.
 <div id="list3-3"></div><script>make15("list3-3", "C=C+1")</script>
 </section>
 
 <section>
-A sound that gradually lower!
+Un son qui baisse progressivement !
 <div id="list4"></div><script>make15("list4", "10 LET A,1\n20 ?A:BEEP A:WAIT 10:LET A,A+1\n30 IF A=10 END\n40 GOTO 20")</script>
 </section>
 
 <section>
-<b>Try it!</b><br>
-1. Let's make a sound that is getting more lower<br>
-2. Let's make a sound that get gradually higher<br>
-3. Let it memorize the birth year, month, day, and store a number that added all<br>
-4. Let's memorize and display the number multiplying the birth month and day<br>
-5. Let's try how many digits can be memorized as many as possible.<br>
+<b>Essayez-le!</b><br>
+1. Faisons un son qui devient de plus en plus bas<br>
+2. Faisons un son qui monte progressivement<br>
+3. Mémorisons l'année de naissance, le mois, le jour et stockons un numéro qui les a tous additionné<br>
+4. Mémorisons et affichons le nombre multipliant le mois et le jour de naissance<br>
+5. Essayons combien de chiffres peuvent être mémorisés autant que possible.<br>
 </section>
 
 <div id="credit"><a href=https://creativecommons.org/licenses/by/4.0/deed.ja>CC BY</a> <a href="https://ichigojam.github.io/print/en/ ">IchigoJam print</a> https://ichigojam.github.io/print/en/  
